--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL = mongodb+srv://souvik1594:CVccrSzSMCvItGve@souviktestcluster.kh4qctj.mongodb.net/signupservice
+MONGO_URL = mongodb+srv://souvik1594:xyz@souviktestcluster.kh4qctj.mongodb.net/signupservice
 TOKEN_SECRET='Souvik'
 DOMAIN = http://localhost:3000
 JWT_LIFETIME= 1h
