--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "eslint-config-next": "13.4.12",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
-    "next": "13.4.12",
+    "next": "^13.4.13",
     "nodemailer": "^6.9.4",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/nodemailer": "^6.4.9",
     "prettier": "3.0.1"
   }
 }
